--- a/public/css/styleconfirm.css
+++ b/public/css/styleconfirm.css
@@ -1,40 +1,51 @@
-body {
-  background-image: url('/public/Images/ambulance1.png');
-  background-repeat: no-repeat;
-  background-size: 100%;
- 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container{
-  padding-left:60px;
+  background-image: url('/public/Images/ambulance1.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+
+.fact1{
+  font-size: 3rem;
+  padding-left: 60px;
+  width: 80vw;
+  height: auto;
+  margin: auto;
+  
 }
 
 .bold1{
   padding: 10px 0px;
+  color: rgb(11, 99, 99);
 }
 
 .bold2{
-  font-size: 40px;
   color: rgb(94, 136, 147);
   padding: 10px 0px;
 }
 
-.fact1{
-  font-size: 50px;
-  color:rgb(44, 69, 91);
-  padding-left: 20px;
-  
-}
-
 .image-center{
+  width: 80vw;
+  height: auto;
+  margin: auto;
   display: flex;
   flex-direction:row;
-  padding: 0px 0px;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  transition: all 0.2 linear;
+
 }
 
 .header-2, .header-3, .header-1{
   background-color: transparent;
-  padding: 0px 60px;
+ 
 }
 
 .fact2, .fact3, .fact4{
@@ -46,14 +57,19 @@ body {
   font-weight: bolder;
 }
 
-.container_details_ambu, .details_traveller, .details_driver{
+.details_ambu, .details_traveller, .details_driver{
    background-color: rgb(60, 97, 97);
-   width: 300px;
-   padding: 1px 5px;
-   font-size: 25px;
+   box-shadow: 0 0 20px #bac3c3;
+    width: 300px;
+    height: 150px;
+   padding: 20px 0px;
+   font-size: 25px; 
    color: white;
    text-align: center;
-   border-radius: 15px;
+   border-radius: 10px;
   
 }
 
+@media (max-width:768px){
+  .container{height: auto;}
+} 
