--- a/public/css/styleconfirm.css
+++ b/public/css/styleconfirm.css
@@ -5,7 +5,7 @@
 }
 
 .container{
-  background-image: url('/public/Images/ambulance1.png');
+  background-image: url('../Images/ambulance1.png');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
